Connect to proper CSS

--- a/annual-report-2024-v1.htm
+++ b/annual-report-2024-v1.htm
@@ -84,7 +84,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Aleo&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="src/dev.css" />
+	<link rel="stylesheet" href="assets/css/build.css" />
 
 	<script src="./assets/js/GSDevTools.min.js"></script>
 	<script src="./assets/js/ScrollSmoother.min.js"></script>
