--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -98,7 +98,7 @@
 </head>
 
 <body>
-	<div class="relative bg-yellow grid place-items-center aspect-[3/2] lg:aspect-[2/1] lg:overflow-hidden">
+	<div class="relative bg-[#FCB540] grid place-items-center aspect-[3/2] lg:aspect-[2/1] lg:overflow-hidden">
 		<img src="./assets/images/MomentumText.svg" alt="Momentum" class="z-10 px-6 max-w-2xl sm:hidden">
 		<div class="hidden sm:flex sm:z-10 ">
 
@@ -133,7 +133,7 @@
 		</div>
 
 	</div>
-	<div class="relative overflow-hidden grid grid-cols-1 bg-maroon md:grid-cols-2 min-h-screen md:min-h-[auto]"
+	<div class="relative overflow-hidden grid grid-cols-1 bg-[#B04E3F] md:grid-cols-2 min-h-screen md:min-h-[auto]"
 		data-parallax-container>
 		<div class="flex flex-col gap-4 z-10 px-10 pt-20 md:py-20 lg:p-20 place-content-center text-white">
 			<img src="./assets/images/PlanningText.svg" alt="Planning & Analytics" data-animate-heading-planning>
@@ -188,7 +188,7 @@
 		</picture>
 	</div>
 
-	<div class="relative overflow-hidden grid grid-cols-1 bg-yellow md:grid-cols-2 min-h-screen md:min-h-[auto]"
+	<div class="relative overflow-hidden grid grid-cols-1 bg-[#FCB540] md:grid-cols-2 min-h-screen md:min-h-[auto]"
 		data-parallax-container>
 		<div class="flex flex-col gap-4 z-10 px-10 pt-20 md:py-20 lg:p-20 place-content-center text-white">
 
@@ -251,7 +251,7 @@
 		</div>
 
 	</div>
-	<div class="relative overflow-hidden flex flex-col text-white md:flex-row-reverse bg-green md:grid-cols-2 min-h-screen md:min-h-[auto]"
+	<div class="relative overflow-hidden flex flex-col text-white md:flex-row-reverse bg-[#B3C557] md:grid-cols-2 min-h-screen md:min-h-[auto]"
 		data-parallax-container>
 		<div
 			class="flex flex-col gap-4 z-10 px-10 pt-20 place-content-center text-white md:py-20 md:pl-0 md:flex-none md:w-1/2 ">
