AR: Turn scripts back on

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -86,8 +86,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Aleo&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/build.css" />
 
-	<script src="./assets/js/GSDevTools.min.js"></script>
-	<script src="./assets/js/ScrollSmoother.min.js"></script>
+	<!-- <script src="./assets/js/GSDevTools.min.js"></script>
+	<script src="./assets/js/ScrollSmoother.min.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 	<script src="./assets/js/annual-report.js"></script>
