Annual Report: Images done

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -99,22 +99,25 @@
 
 <body>
 	<div class="relative bg-[#FCB540] grid place-items-center aspect-[3/2] lg:aspect-[3/1] lg:overflow-hidden">
-		<img src="./assets/images/MomentumText.svg" alt="Momentum" class="z-10 max-w-2xl px-6 sm:hidden">
+		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/MomentumText.svg" alt="Momentum"
+			class="z-10 max-w-2xl px-6 sm:hidden">
 		<div class="hidden sm:flex sm:z-10 ">
 
-			<img src="./assets/images/Mometext.svg" alt="Mome" class="sm:h-28" data-animate-mome>
-			<img src="./assets/images/NtumText.svg" alt="ntum" class="sm:h-28 sm:transform sm:-translate-x-[6%]"
-				data-animate-ntum>
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Mometext.svg" alt="Mome"
+				class="sm:h-28" data-animate-mome>
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/NtumText.svg" alt="ntum"
+				class="sm:h-28 sm:transform sm:-translate-x-[6%]" data-animate-ntum>
 		</div>
-		<img src="./assets/images/TireTreadBg.png" class="absolute z-0 object-cover w-full h-full opacity-20"
+		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/TireTreadBg.png"
+			class="absolute z-0 object-cover w-full h-full opacity-20"
 			style="transform: rotateX(-180deg) rotate(180deg) translate(25%, 0%);" data-momentum-background>
 	</div>
 	<div class="grid grid-cols-1 md:grid-cols-2">
 		<div class="relative overflow-hidden aspect-square md:aspect-auto">
-			<!-- <img src="./assets/images/NiyolWind_parallax.jpg"
+			<!-- <img src="https://tristate.coop/sites/default/files/images/annual-report/2024/NiyolWind_parallax.jpg"
 				class="absolute object-cover object-center w-full -translate-y-1/2 top-1/2" alt="Wind Turbine"> -->
-			<img src="./assets/images/turbine1-768x768.jpg" class="absolute object-cover object-center w-full h-full"
-				alt="Wind Turbine">
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/turbine1-768x768.jpg"
+				class="absolute object-cover object-center w-full h-full" alt="Wind Turbine">
 
 		</div>
 		<div class="flex flex-col gap-4 p-12 lg:py-20 lg:pl-20 lg:pr-16 place-content-center">
@@ -128,7 +131,8 @@
 				moving, we've been steadily gaining momentum.
 			</p>
 			<p><a href="#" class="inline-flex items-center gap-2 px-4 py-2 border border-black rounded-full">
-					<img src="./assets/images/arrow-down-solid.svg" alt="Plus Icon" class="w-4 h-4 mt-1">
+					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
+						alt="Plus Icon" class="w-4 h-4 mt-1">
 					<span>Download the <span class="hidden lg:inline">2023 annual</span> report</span>
 				</a>
 			</p>
@@ -139,7 +143,8 @@
 	<div class="relative overflow-hidden grid grid-cols-1 bg-[#B04E3F] md:grid-cols-2 min-h-screen md:min-h-[auto]"
 		data-parallax-container>
 		<div class="z-10 flex flex-col gap-4 px-10 pt-20 text-white md:py-20 lg:p-20 place-content-center">
-			<img src="./assets/images/PlanningText.svg" alt="Planning & Analytics" data-animate-heading-planning>
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/PlanningText.svg"
+				alt="Planning & Analytics" data-animate-heading-planning>
 			<p>
 				Tri-State is maintaining
 				reliability while retiring coal
@@ -148,20 +153,23 @@
 			<p><a href="#" class="underline">Read our Q&A with Lisa Tiffin, SVP Energy Management</a></p>
 		</div>
 		<div class="relative z-10 aspect-square md:aspect-auto">
-			<img src="./assets/images/Lisa.png" class="absolute max-w-xs transform -translate-x-1/2 top-10 left-1/2"
-				alt="Lisa Tiffin">
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Lisa.png"
+				class="absolute max-w-xs transform -translate-x-1/2 top-10 left-1/2" alt="Lisa Tiffin">
 		</div>
-		<img src="./assets/images/ChartBG_web.png"
+		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/ChartBG_web.png"
 			class="absolute z-0 opacity-20 top-1/2 -translate-y-1/2 -translate-x-1/2 left-1/2 max-w-[200%] md:max-w-full"
 			alt="Background Image" data-parallax-image="absolute opacity-20">
 	</div>
 	<div class="relative overflow-hidden flex flex-col text-white md:flex-row-reverse md:aspect-[2/1] xl:aspect-[7/3]">
-		<img src="./assets/images/Sun.svg" class="absolute z-10 w-1/2 top-4 left-2 opacity-10 md:w-1/3" alt=""
-			data-animate-sun style="transform-origin: 46% 50%;">
+		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Sun.svg"
+			class="absolute z-10 w-1/2 top-4 left-2 opacity-10 md:w-1/3" alt="" data-animate-sun
+			style="transform-origin: 46% 50%;">
 
 		<div class="relative z-20 flex flex-col items-center gap-4 p-10 pt-20 md:justify-center md:flex-none md:w-1/2">
-			<img src="./assets/images/Pin.svg" class="w-10 md:w-20 lg:w-30" alt="Pin" data-animate-pin>
-			<img src="./assets/images/ServingText.svg" class="" alt="Serving Members">
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Pin.svg"
+				class="w-10 md:w-20 lg:w-30" alt="Pin" data-animate-pin>
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/ServingText.svg" class=""
+				alt="Serving Members">
 			<p>
 				<a href="#" class="underline">Learn more about Escalante Solar</a>
 			</p>
@@ -174,20 +182,21 @@
 			</p>
 			<p><a href="#" class="underline">Read our Q&A with Susan Hunter, VP Energy Resources</a></p>
 		</div>
-
-		<img src="./assets/images/Susan.png"
+		https://tristate.coop/sites/default/files/images/annual-report/2024/Susan.png
+		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Susan.png"
 			class="absolute bottom-0 z-10 hidden max-w-xs transform translate-y-1/2 left-1/4 -translate-x-1/4 lg:block"
 			alt="Susan Hunter">
-		<img src="./assets/images/EscalanteSolar.jpg" class="absolute z-0 h-full w-full object-cover lg:max-w-[150%]"
-			alt="Escalante Solar">
+		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/EscalanteSolar_web.jpg"
+			class="absolute z-0 h-full w-full object-cover lg:max-w-[150%]" alt="Escalante Solar">
 	</div>
 
 	<div
 		class="box-border flex items-center justify-center px-10 md:p-20 aspect-square md:aspect-video lg:aspect-auto lg:py-40">
 		<picture class="flex-grow">
-			<source srcset="./assets/images/70PercentText_Web.svg" media="(min-width: 768px)">
-			<img src="./assets/images/70PercentText_Mobile.svg" class="h-auto max-w-full"
-				alt="70% OF OUR MEMBERS' ENERGY MIX WILL COME FROM CLEAN SOURCES IN 2030">
+			<source srcset="https://tristate.coop/sites/default/files/images/annual-report/2024/70PercentText_Web.svg"
+				media="(min-width: 768px)">
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/70PercentText_Mobile.svg"
+				class="h-auto max-w-full" alt="70% OF OUR MEMBERS' ENERGY MIX WILL COME FROM CLEAN SOURCES IN 2030">
 		</picture>
 	</div>
 
@@ -195,7 +204,8 @@
 		data-parallax>
 		<div class="z-10 flex flex-col gap-4 px-10 pt-20 text-white md:py-20 lg:p-20 place-content-center">
 
-			<img src="./assets/images/LeadingText.svg" alt="Leading the Conversation" data-animate-heading-leading>
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/LeadingText.svg"
+				alt="Leading the Conversation" data-animate-heading-leading>
 
 			<p class="leading-9 headline-2">
 				Learn how collaboration and
@@ -206,17 +216,17 @@
 					Federal Affairs Manager</a></p>
 		</div>
 		<div class="relative z-10 aspect-square md:aspect-auto">
-			<img src="./assets/images/Evan.png" class="absolute max-w-xs transform -translate-x-1/2 md:top-10 left-1/2"
-				alt="Evan Jurkovich">
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Evan.png"
+				class="absolute max-w-xs transform -translate-x-1/2 md:top-10 left-1/2" alt="Evan Jurkovich">
 		</div>
-		<img src="./assets/images/TireTreadBg.png"
+		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/TireTreadBg.png"
 			class="absolute right-0 z-0 opacity-20 transform translate-x-1/2 -translate-y-[7%]"
 			data-parallax-image="absolute right-0 z-0 opacity-20 transform translate-x-1/2 -translate-y-[7%]">
 	</div>
 	<div class="grid grid-cols-1 md:grid-cols-2">
 		<div class="overflow-hidden aspect-square md:aspect-auto md:relative" data-parallax-container>
-			<img src="./assets/images/trucks-parallax-v2-1600h.png" class="object-cover w-full h-full md:absolute"
-				alt="Trucks" data-parallax-image="absolute">
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/trucks-parallax-v2-1600h.png"
+				class="object-cover w-full h-full md:absolute" alt="Trucks" data-parallax-image="absolute">
 		</div>
 		<div class="flex flex-col gap-4 p-10 pt-20 md:py-20">
 			<h2 class="leading-9 headline-2">Accelerating our transition</h2>
@@ -227,26 +237,31 @@
 			</p>
 			<ul class="flex flex-col gap-2 overflow-hidden" data-animate-bullets>
 				<li class="flex items-start gap-2">
-					<img src="./assets/images/plus-solid.svg" alt="Plus Icon" class="w-4 h-4 mt-1">
+					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+						alt="Plus Icon" class="w-4 h-4 mt-1">
 					1,250 MW of geographically distributed renewables and battery storage added between 2026 and 2031
 				</li>
 				<li class="flex items-start gap-2">
-					<img src="./assets/images/plus-solid.svg" alt="Plus Icon" class="w-4 h-4 mt-1">
+					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+						alt="Plus Icon" class="w-4 h-4 mt-1">
 					Retirement of coal-fired generation
 				</li>
 				<li class="flex items-start gap-2">
-					<img src="./assets/images/plus-solid.svg" alt="Plus Icon" class="w-4 h-4 mt-1">
+					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+						alt="Plus Icon" class="w-4 h-4 mt-1">
 					New 290 MW combined-cycle natural gas unit in 2028, with carbon capture and sequestration added in
 					2031
 				</li>
 				<li class="flex items-start gap-2">
-					<img src="./assets/images/plus-solid.svg" alt="Plus Icon" class="w-4 h-4 mt-1">
+					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+						alt="Plus Icon" class="w-4 h-4 mt-1">
 					Pursuit of federal funding through the USDA
 				</li>
 			</ul>
 
 			<p><a href="#" class="inline-flex items-center gap-2 px-4 py-2 border border-black rounded-full">
-					<img src="./assets/images/arrow-down-solid.svg" alt="Plus Icon" class="w-4 h-4 mt-1">
+					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
+						alt="Plus Icon" class="w-4 h-4 mt-1">
 					<span>Download the <span class="hidden lg:inline">2023 annual</span> report</span>
 				</a>
 			</p>
@@ -268,23 +283,27 @@
 				demand while reducing emissions:
 			</p>
 			<ul class="flex flex-col gap-2 overflow-hidden" data-animate-bullets>
-				<li class="flex items-start gap-2"><img src="./assets/images/plus-solid-white.svg" alt="Plus Icon"
-						class="w-4 h-4 mt-1">Read our Q&A with Pete Rusin, Energy Services</li>
-				<li class="flex items-start gap-2"><img src="./assets/images/plus-solid-white.svg" alt="Plus Icon"
-						class="w-4 h-4 mt-1">Energy efficient home upgrades through On-Bill Repayment</li>
-				<li class="flex items-start gap-2"><img src="./assets/images/plus-solid-white.svg" alt="Plus Icon"
-						class="w-4 h-4 mt-1">Rebates, electrification and more through our Electrify and
+				<li class="flex items-start gap-2"><img
+						src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid-white.svg"
+						alt="Plus Icon" class="w-4 h-4 mt-1">Read our Q&A with Pete Rusin, Energy Services</li>
+				<li class="flex items-start gap-2"><img
+						src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid-white.svg"
+						alt="Plus Icon" class="w-4 h-4 mt-1">Energy efficient home upgrades through On-Bill Repayment
+				</li>
+				<li class="flex items-start gap-2"><img
+						src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid-white.svg"
+						alt="Plus Icon" class="w-4 h-4 mt-1">Rebates, electrification and more through our Electrify and
 					Save® program</li>
 			</ul>
 		</div>
 		<div class="relative z-10 pt-10 aspect-square md:aspect-auto md:flex-none md:w-1/2">
-			<img src="./assets/images/E&SLogo.svg"
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/E&SLogo.svg"
 				class="absolute z-10 size-20 bottom-10 right-10 md:size-32 md:bottom-28 md:right-10"
 				alt="Electrify and Save Logo" data-animate-logo>
-			<img src="./assets/images/Pete.png"
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Pete.png"
 				class="absolute z-0 max-w-xs transform -translate-x-1/2 md:top-10 left-1/2" alt="Pete">
 		</div>
-		<img src="./assets/images/CircuitTreeBg.png" class="absolute z-0 opacity-20 max-w-none w-full transform translate-x-[-40%] translate-y-[-40%] rotate-90 
+		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/CircuitTreeBg.png" class="absolute z-0 opacity-20 max-w-none w-full transform translate-x-[-40%] translate-y-[-40%] rotate-90 
 					md:w-[60%] md:right-[55%] md:-top-[5%] md:translate-x-0 md:translate-y-0 md:rotate-0"
 			alt="Circuit Tree Background"
 			data-parallax-image="absolute z-0 opacity-20 transform md:w-[60%] md:right-[55%] md:-top-[5%] md:translate-x-0 md:translate-y-0 md:rotate-0">
@@ -316,20 +335,23 @@
 
 			<p><a class="inline-flex items-center gap-2 px-4 py-2 transition-transform border border-black rounded-full hover:scale-105 "
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
-					target="_blank" rel="noopener"><img src="./assets/images/arrow-down-solid.svg" alt="Arrow Down Icon"
-						class="w-4 h-4 mt-1">Download 2023 Annual Report</a></p>
+					target="_blank" rel="noopener"><img
+						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
+						alt="Arrow Down Icon" class="w-4 h-4 mt-1">Download 2023 Annual Report</a></p>
 
 
 			<p><a class="inline-flex items-center gap-2 px-4 py-2 transition-transform border border-black rounded-full hover:scale-105"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2022%20Tri-State%20Annual%20Report.pdf"
-					target="_blank" rel="noopener"><img src="./assets/images/arrow-down-solid.svg" alt="Arrow Down Icon"
-						class="w-4 h-4 mt-1">Download 2022 Annual Report</a></p>
+					target="_blank" rel="noopener"><img
+						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
+						alt="Arrow Down Icon" class="w-4 h-4 mt-1">Download 2022 Annual Report</a></p>
 
 
 			<p><a class="inline-flex items-center gap-2 px-4 py-2 transition-transform border border-black rounded-full hover:scale-105"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/Tri-State-Annual-Report-FY2021.pdf"
-					target="_blank" rel="noopener"><img src="./assets/images/arrow-down-solid.svg" alt="Arrow Down Icon"
-						class="w-4 h-4 mt-1">Download 2021 Annual Report</a></p>
+					target="_blank" rel="noopener"><img
+						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
+						alt="Arrow Down Icon" class="w-4 h-4 mt-1">Download 2021 Annual Report</a></p>
 
 		</div>
 
