Annual Report: Links connected

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -130,7 +130,8 @@
 				in our mission. And with our members, we haven' t just been
 				moving, we've been steadily gaining momentum.
 			</p>
-			<p><a href="#" class="inline-flex items-center gap-2 px-4 py-2 border border-black rounded-full">
+			<p><a href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
+					class="inline-flex items-center gap-2 px-4 py-2 border border-black rounded-full">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
 					<span>Download the <span class="hidden lg:inline">2023 annual</span> report</span>
@@ -150,7 +151,8 @@
 				reliability while retiring coal
 				and adding renewables.
 			</p>
-			<p><a href="#" class="underline">Read our Q&A with Lisa Tiffin, SVP Energy Management</a></p>
+			<p><a href="https://tristate.coop/lisa-tiffin-annual-report-2023" class="underline">Read our Q&A with Lisa
+					Tiffin, SVP Energy Management</a></p>
 		</div>
 		<div class="relative z-10 aspect-square md:aspect-auto">
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Lisa.png"
@@ -171,7 +173,8 @@
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/ServingText.svg" class=""
 				alt="Serving Members">
 			<p>
-				<a href="#" class="underline">Learn more about Escalante Solar</a>
+				<a href="https://tristate.coop/susan-hunter-annual-report-2023" class="underline">Learn more about
+					Escalante Solar</a>
 			</p>
 		</div>
 
@@ -180,7 +183,8 @@
 				Tri-State is making a huge investment in clean energy by adding 1,250 MW of renewables and battery
 				storage.
 			</p>
-			<p><a href="#" class="underline">Read our Q&A with Susan Hunter, VP Energy Resources</a></p>
+			<p><a href="https://tristate.coop/susan-hunter-annual-report-2023" class="underline">Read our Q&A with Susan
+					Hunter, VP Energy Resources</a></p>
 		</div>
 		https://tristate.coop/sites/default/files/images/annual-report/2024/Susan.png
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Susan.png"
@@ -212,7 +216,8 @@
 				federal funding benefits both
 				members and end-consumers
 			</p>
-			<p><a href="#" class="underline">Read our Q&A with Evan Jurkovich, Energy Policy and
+			<p><a href="https://tristate.coop/evan-jurkovich-annual-report-2023" class="underline">Read our Q&A with
+					Evan Jurkovich, Energy Policy and
 					Federal Affairs Manager</a></p>
 		</div>
 		<div class="relative z-10 aspect-square md:aspect-auto">
@@ -259,7 +264,8 @@
 				</li>
 			</ul>
 
-			<p><a href="#" class="inline-flex items-center gap-2 px-4 py-2 border border-black rounded-full">
+			<p><a href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
+					class="inline-flex items-center gap-2 px-4 py-2 border border-black rounded-full">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
 					<span>Download the <span class="hidden lg:inline">2023 annual</span> report</span>
