Annual Report: Incorporate default CSS from site

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -10,6 +10,12 @@
 			max-width: 1200px;
 			margin: 0 auto 600px !important;
 		}
+	</style>
+	<!-- <style>
+		body {
+			max-width: 1200px;
+			margin: 0 auto 600px !important;
+		}
 
 
 
@@ -80,10 +86,14 @@
 				font-size: calc(1.5rem + ((1vw - 0.3rem) * 0.5556));
 			}
 		}
-	</style>
+	</> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Aleo&display=swap" rel="stylesheet">
+	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/css/css_Rli8DIVnIKbjfXhlxva1M3yFKBDc26-qMFDXgVLNaEY.css" />
+	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_standards-c73c2df017737ccf23698c0b0736a119.css?sgj5sc" />
 	<link rel="stylesheet" href="assets/css/build.css" />
 
 	<!-- <script src="./assets/js/GSDevTools.min.js"></script>
@@ -98,6 +108,7 @@
 </head>
 
 <body>
+<body id="main">
 	<div class="relative bg-[#FCB540] grid place-items-center aspect-[3/2] lg:aspect-[3/1] lg:overflow-hidden">
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/MomentumText.svg" alt="Momentum"
 			class="z-10 max-w-2xl px-6 sm:hidden">
