Add 'hideme' as global class
The utility 'hidden' exists in Bootstrap as we need an alternative.

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -112,7 +112,7 @@
 	<div class="relative bg-[#FCB540] grid place-items-center aspect-[3/2] lg:aspect-[3/1] lg:overflow-hidden">
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/MomentumText.svg" alt="Momentum"
 			class="z-10 max-w-2xl px-6 sm:hidden">
-		<div class="hidden sm:flex sm:z-10 ">
+		<div class="hideme sm:flex sm:z-10 ">
 
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Mometext.svg" alt="Mome"
 				class="sm:h-28" data-animate-mome>
@@ -145,7 +145,7 @@
 					class="inline-flex items-center gap-2 px-4 py-2 border border-black rounded-full">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
-					<span>Download the <span class="hidden lg:inline">2023 annual</span> report</span>
+					<span>Download the <span class="hideme lg:inline">2023 annual</span> report</span>
 				</a>
 			</p>
 
@@ -199,7 +199,7 @@
 		</div>
 		https://tristate.coop/sites/default/files/images/annual-report/2024/Susan.png
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Susan.png"
-			class="absolute bottom-0 z-10 hidden max-w-xs transform translate-y-1/2 left-1/4 -translate-x-1/4 lg:block"
+			class="absolute bottom-0 z-10 max-w-xs transform translate-y-1/2 hideme left-1/4 -translate-x-1/4 lg:block"
 			alt="Susan Hunter">
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/EscalanteSolar_web.jpg"
 			class="absolute z-0 h-full w-full object-cover lg:max-w-[150%]" alt="Escalante Solar">
@@ -279,7 +279,7 @@
 					class="inline-flex items-center gap-2 px-4 py-2 border border-black rounded-full">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
-					<span>Download the <span class="hidden lg:inline">2023 annual</span> report</span>
+					<span>Download the <span class="hideme lg:inline">2023 annual</span> report</span>
 				</a>
 			</p>
 
