Annual Report: Remove default transition
The bootstrap css has a global transition value.  Need to override for our elements.

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -115,9 +115,9 @@
 		<div class="hideme sm:flex sm:z-10 ">
 
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Mometext.svg" alt="Mome"
-				class="sm:h-28" data-animate-mome>
+				class="transition-none sm:h-28" data-animate-mome>
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/NtumText.svg" alt="ntum"
-				class="sm:h-28 sm:transform sm:-translate-x-[6%]" data-animate-ntum>
+				class="sm:h-28 sm:transform sm:-translate-x-[6%] transition-none" data-animate-ntum>
 		</div>
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/TireTreadBg.png"
 			class="absolute z-0 object-cover w-full h-full opacity-20"
@@ -156,7 +156,7 @@
 		data-parallax-container>
 		<div class="z-10 flex flex-col gap-4 px-10 pt-20 text-white md:py-20 lg:p-20 place-content-center">
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/PlanningText.svg"
-				alt="Planning & Analytics" data-animate-heading-planning>
+				alt="Planning & Analytics" class="transition-none" data-animate-heading-planning>
 			<p>
 				Tri-State is maintaining
 				reliability while retiring coal
@@ -175,12 +175,12 @@
 	</div>
 	<div class="relative overflow-hidden flex flex-col text-white md:flex-row-reverse md:aspect-[2/1] xl:aspect-[7/3]">
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Sun.svg"
-			class="absolute z-10 w-1/2 top-4 left-2 opacity-10 md:w-1/3" alt="" data-animate-sun
+			class="absolute z-10 w-1/2 transition-none top-4 left-2 opacity-10 md:w-1/3" alt="" data-animate-sun
 			style="transform-origin: 46% 50%;">
 
 		<div class="relative z-20 flex flex-col items-center gap-4 p-10 pt-20 md:justify-center md:flex-none md:w-1/2">
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Pin.svg"
-				class="w-10 md:w-20 lg:w-30" alt="Pin" data-animate-pin>
+				class="w-10 transition-none md:w-20 lg:w-30" alt="Pin" data-animate-pin>
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/ServingText.svg" class=""
 				alt="Serving Members">
 			<p>
@@ -220,7 +220,7 @@
 		<div class="z-10 flex flex-col gap-4 px-10 pt-20 text-white md:py-20 lg:p-20 place-content-center">
 
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/LeadingText.svg"
-				alt="Leading the Conversation" data-animate-heading-leading>
+				alt="Leading the Conversation" class="transition-none" data-animate-heading-leading>
 
 			<p class="leading-9 headline-2">
 				Learn how collaboration and
@@ -252,23 +252,23 @@
 				four states, while accelerating our clean energy transition:
 			</p>
 			<ul class="flex flex-col gap-2 overflow-hidden" data-animate-bullets>
-				<li class="flex items-start gap-2">
+				<li class="flex items-start gap-2 transition-none">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
 					1,250 MW of geographically distributed renewables and battery storage added between 2026 and 2031
 				</li>
-				<li class="flex items-start gap-2">
+				<li class="flex items-start gap-2 transition-none">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
 					Retirement of coal-fired generation
 				</li>
-				<li class="flex items-start gap-2">
+				<li class="flex items-start gap-2 transition-none">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
 					New 290 MW combined-cycle natural gas unit in 2028, with carbon capture and sequestration added in
 					2031
 				</li>
-				<li class="flex items-start gap-2">
+				<li class="flex items-start gap-2 transition-none">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
 					Pursuit of federal funding through the USDA
@@ -300,14 +300,14 @@
 				demand while reducing emissions:
 			</p>
 			<ul class="flex flex-col gap-2 overflow-hidden" data-animate-bullets>
-				<li class="flex items-start gap-2"><img
+				<li class="flex items-start gap-2 transition-none"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid-white.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">Read our Q&A with Pete Rusin, Energy Services</li>
-				<li class="flex items-start gap-2"><img
+				<li class="flex items-start gap-2 transition-none"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid-white.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">Energy efficient home upgrades through On-Bill Repayment
 				</li>
-				<li class="flex items-start gap-2"><img
+				<li class="flex items-start gap-2 transition-none"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid-white.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">Rebates, electrification and more through our Electrify and
 					Save® program</li>
