Annual Report: Link styling
The links have a global style on the website and we need new classes to override and then need to use them.

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -107,7 +107,6 @@
 
 </head>
 
-<body>
 <body id="main">
 	<div class="relative bg-[#FCB540] grid place-items-center aspect-[3/2] lg:aspect-[3/1] lg:overflow-hidden">
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/MomentumText.svg" alt="Momentum"
@@ -132,7 +131,7 @@
 
 		</div>
 		<div class="flex flex-col gap-4 p-12 lg:py-20 lg:pl-20 lg:pr-16 place-content-center">
-			<h2 class="leading-9 headline-2">Our Momentum</h2>
+			<h2 class="leading-9 text-black headline-2">Our Momentum</h2>
 			<p>
 
 				“Watch our feet” has been our mantra, as we've committed to
@@ -142,7 +141,7 @@
 				moving, we've been steadily gaining momentum.
 			</p>
 			<p><a href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
-					class="inline-flex items-center gap-2 px-4 py-2 border border-black rounded-full">
+					class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline border border-black rounded-full">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
 					<span>Download the <span class="hideme lg:inline">2023 annual</span> report</span>
@@ -162,7 +161,8 @@
 				reliability while retiring coal
 				and adding renewables.
 			</p>
-			<p><a href="https://tristate.coop/lisa-tiffin-annual-report-2023" class="underline">Read our Q&A with Lisa
+			<p><a href="https://tristate.coop/lisa-tiffin-annual-report-2023"
+					class="font-normal text-white underline">Read our Q&A with Lisa
 					Tiffin, SVP Energy Management</a></p>
 		</div>
 		<div class="relative z-10 aspect-square md:aspect-auto">
@@ -184,20 +184,21 @@
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/ServingText.svg" class=""
 				alt="Serving Members">
 			<p>
-				<a href="https://tristate.coop/susan-hunter-annual-report-2023" class="underline">Learn more about
+				<a href="https://tristate.coop/susan-hunter-annual-report-2023"
+					class="font-normal text-white underline">Learn more about
 					Escalante Solar</a>
 			</p>
 		</div>
 
 		<div class="z-20 flex flex-col justify-end gap-4 px-10 pb-20 md:flex-none md:w-1/2 lg:p-20">
-			<p class="leading-9 headline-2">
+			<p class="leading-9 text-white headline-2">
 				Tri-State is making a huge investment in clean energy by adding 1,250 MW of renewables and battery
 				storage.
 			</p>
-			<p><a href="https://tristate.coop/susan-hunter-annual-report-2023" class="underline">Read our Q&A with Susan
+			<p><a href="https://tristate.coop/susan-hunter-annual-report-2023"
+					class="font-normal text-white underline">Read our Q&A with Susan
 					Hunter, VP Energy Resources</a></p>
 		</div>
-		https://tristate.coop/sites/default/files/images/annual-report/2024/Susan.png
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Susan.png"
 			class="absolute bottom-0 z-10 max-w-xs transform translate-y-1/2 hideme left-1/4 -translate-x-1/4 lg:block"
 			alt="Susan Hunter">
@@ -222,12 +223,13 @@
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/LeadingText.svg"
 				alt="Leading the Conversation" class="transition-none" data-animate-heading-leading>
 
-			<p class="leading-9 headline-2">
+			<p class="text-3xl leading-9 text-white headline-2 p-">
 				Learn how collaboration and
 				federal funding benefits both
 				members and end-consumers
 			</p>
-			<p><a href="https://tristate.coop/evan-jurkovich-annual-report-2023" class="underline">Read our Q&A with
+			<p><a href="https://tristate.coop/evan-jurkovich-annual-report-2023"
+					class="font-normal text-white underline">Read our Q&A with
 					Evan Jurkovich, Energy Policy and
 					Federal Affairs Manager</a></p>
 		</div>
@@ -245,7 +247,7 @@
 				class="object-cover w-full h-full md:absolute" alt="Trucks" data-parallax-image="absolute">
 		</div>
 		<div class="flex flex-col gap-4 p-10 pt-20 md:py-20">
-			<h2 class="leading-9 headline-2">Accelerating our transition</h2>
+			<h2 class="leading-9 text-black headline-2">Accelerating our transition</h2>
 			<p>We have an ambitious plan focused on electric system resilience
 				and reduced costs. Built on a foundation of collaboration, our
 				plan is designed to benefit the electric consumers across our
@@ -276,7 +278,7 @@
 			</ul>
 
 			<p><a href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
-					class="inline-flex items-center gap-2 px-4 py-2 border border-black rounded-full">
+					class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline border border-black rounded-full">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
 					<span>Download the <span class="hideme lg:inline">2023 annual</span> report</span>
@@ -291,7 +293,7 @@
 		<div
 			class="z-10 flex flex-col gap-4 px-10 pt-20 text-white place-content-center md:py-20 md:pl-0 md:flex-none md:w-1/2 ">
 
-			<h2 class="leading-9 headline-2">We're bringing energy efficiency
+			<h2 class="leading-9 text-white headline-2">We're bringing energy efficiency
 				within reach for members,
 				communities and homeowners</h2>
 			<p>
@@ -347,24 +349,24 @@
 	</div>
 
 	<div class="bg-[#FCB540] p-12 py-16">
-		<h2 class="pb-6 leading-9 text-center headline-2">Download Past Annual Reports</h2>
+		<h2 class="pb-6 leading-9 text-center text-black headline-2">Download Past Annual Reports</h2>
 		<div class="grid max-w-lg grid-flow-row gap-8 mx-auto place-content-center">
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 transition-transform border border-black rounded-full hover:scale-105 "
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full hover:scale-105"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Arrow Down Icon" class="w-4 h-4 mt-1">Download 2023 Annual Report</a></p>
 
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 transition-transform border border-black rounded-full hover:scale-105"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full hover:scale-105"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2022%20Tri-State%20Annual%20Report.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Arrow Down Icon" class="w-4 h-4 mt-1">Download 2022 Annual Report</a></p>
 
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 transition-transform border border-black rounded-full hover:scale-105"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full hover:scale-105"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/Tri-State-Annual-Report-FY2021.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
